--- a/src/app/componentes/usuarios/usuario-regis/usuario-regis.component.html
+++ b/src/app/componentes/usuarios/usuario-regis/usuario-regis.component.html
@@ -33,7 +33,7 @@
             El nombre es <strong>obligatorio</strong>
           </mat-error>
           <mat-error *ngIf="user.get('name').hasError('minlength')">
-            La cédula debe tener minimo 7 caracteres
+            El nombre debe tener minimo 7 caracteres
           </mat-error>
         </mat-form-field>
      
