--- a/src/app/componentes/usuarios/usuario-search/usuario-search.component.html
+++ b/src/app/componentes/usuarios/usuario-search/usuario-search.component.html
@@ -1,9 +1,110 @@
+<div class="div-contenido">
+  <h4>Listado de  Usuarios Eliminados</h4>
+  <mat-divider></mat-divider>
 
 
-    <div class="div-contenido">
-        <h4>Buscar Usuario</h4>
-        <mat-divider></mat-divider>
+  <div class="container table-responsive mt-2">
 
+    <div class="contanier">
+      <form>
+        <mat-form-field *ngIf="data">
+          <mat-label>Buscar Usuario</mat-label>
+          <input matInput placeholder="Ingrese la cédula" [(ngModel)]="filtro" name="filtro">
+
+
+        </mat-form-field>
+      </form>
+    </div>
+
+    <table class="table table-bordered">
+
+      <thead>
+
+        <tr>
+          <th scope="col" class="anchoth">Cédula </th>
+          <th scope="col" class="anchotd">Nombre </th>
+          <th scope="col" class="anchotd">Correo</th>
+          <th scope="col" class="anchotd">Tipo de Usuario</th>
+          <th scope="col" class="anchotd">Fecha Eliminación</th>
+          <th scope="col" class="anchotd">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <div *ngIf="data; then data1  else sinData "></div>
+        <ng-template #data1>
+          <tr *ngFor="let fila2 of usuarios  |search:filtro | paginate:page_size:page_number">
+
+            <td class="item-fila">{{fila2.cedula}}</td>
+            <td class="item-fila">{{fila2.name}}</td>
+            <td class="item-fila">{{fila2.email}}</td>
+            <td class="item-fila">{{fila2.tipo_usuario}}</td>
+            <td class="item-fila">{{fila2.Eliminado}}</td>
+            
+            <td class="item-fila">
+              <button class="btn btn-warning editButton" title="Restaurar Usuario" data-toggle="modal" data-target="#modalRestaurar" 
+              (click)="dataModal(fila2)">
+                <mat-icon class="edIcon">restore</mat-icon>
+              </button>
+             
+            </td>
+
+          </tr>
+        </ng-template>
+        <ng-template #sinData>
+          <tr>
+            <td colspan="6">Sin datos</td>
+          </tr>
+        </ng-template>
+
+
+      </tbody>
+    </table>
+    <div class="container div-button" *ngIf="data">
+      <button class="btn btn-dark btn-sm">
+          Exportar a excel
+      </button>
+  </div>
+    <mat-paginator [length]="[usuarios.length]" [pageSize]="page_size" [pageSizeOptions]="[5, 10,20,50, 100]"
+      (page)="paginator($event)" showFirstLastButtons *ngIf="data">
+    </mat-paginator>
+  </div>
+
+<!-- Modal  Restarurar Usuario-->
+<div class="modal fade" id="modalRestaurar" tabindex="-1" role="dialog" #closeModal>
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">¿Desea restaurar Usuario?</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
+      <div class="modal-body" id="body-modal">
+        <div>
+          <p ><strong>Nombre de Usuario: </strong></p>
+          <p ><strong> Cédula del Usuario: </strong></p>
+          <p ><strong>Correo del Usuario:  </strong></p>
+        </div>
 
-  
+        <div class="div-modal">
+          <p >{{nombre}}</p>
+          <p >{{cedula}}</p>
+          <p > {{email}}</p>
+        </div>        
+        
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">No</button>
+        <button type="submit" class="btn btn-secondary" (click)="restoreUser()">Si</button>
+      </div>
+    
+    </div>
+  </div>
+</div>
+</div>
+
+<ngx-spinner type="ball-spin-clockwise">
+  <p style="font-size: 20px; color: white">Cargando...</p>
+</ngx-spinner>
+
+<ngx-alerts></ngx-alerts>
