Refactorizacion de gestion de usuario y gestion de vendedores

--- a/src/app/componentes/dashboard/dashboard.component.html
+++ b/src/app/componentes/dashboard/dashboard.component.html
@@ -36,9 +36,8 @@
 
           </mat-expansion-panel-header>
           <div class="div-lista-datos">
-            <a routerLink="vendedor">Registrar vendedor</a>
-            <a routerLink="vendedor/edit-vendedor">Gestionar Vendedores</a>
-            <a routerLink="vendedor/list-vendedor">Todos los Vendedores</a>
+            <a routerLink="vendedor">Gestionar Vendedores</a>
+            <a routerLink="vendedor/vendedor-delete">Vendedores Eliminados</a>
           </div>
         </mat-expansion-panel>
 
@@ -102,8 +101,7 @@
 
           </mat-expansion-panel-header>
           <div class="div-lista-datos" >
-            <a routerLink="usuario" >Registrar Usuario</a>
-            <a routerLink="usuario/gestion-usuario" routerLinkActive="item-estado">Gestionar Usuarios</a>
+            <a routerLink="usuario" routerLinkActive="item-estado">Gestionar Usuarios</a>
             <a routerLink="usuario/usuarios-delete" routerLinkActive="item-estado">Usuarios Eliminados</a>
           </div>
         </mat-expansion-panel>
