--- a/src/app/componentes/usuarios/usuario-edit/usuario-edit.component.css
+++ b/src/app/componentes/usuarios/usuario-edit/usuario-edit.component.css
@@ -53,7 +53,7 @@ td{
     font-size: 19px !important;
 }
 .mat-form-field{
-    width : 100% !important;
+    width : 90% !important;
 }
 
 #container-form{
@@ -109,3 +109,8 @@ td{
       border: none !important;
       background-color: white !important;
   }
+  .div-search-button{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
